# branch-nexus

./: .eslintrc.json  .gitignore  .prettierrc.json  AGENTS.md  CLAUDE.md  LICENSE  PRD.md  README.md  build_windows_installer.bat  package-lock.json  package.json  pyproject.toml  tsconfig.json  tsup.config.ts  vitest.config.ts
.github/workflows/: ci-cd.yml  ci.yml  node-ci.yml
packaging/: branchnexus-gui.spec
scripts/: report_phase2.py
src/branchnexus/: __init__.py  __main__.py  cli.py  config.py  errors.py  logging.py  orchestrator.py  presets.py  retry.py  session.py
src/branchnexus/docker/: __init__.py  runtime.py
src/branchnexus/git/: __init__.py  branch_provider.py  github_repositories.py  materialize.py  remote_provider.py  remote_workspace.py  repo_discovery.py
src/branchnexus/hooks/: runner.py
src/branchnexus/runtime/: __init__.py  profile.py  wsl_discovery.py  wsl_runtime.py  wsl_selection.py
src/branchnexus/terminal/: __init__.py  models.py  pty_backend.py  service.py
src/branchnexus/tmux/: __init__.py  bootstrap.py  layouts.py
tests/: conftest.py  test_bootstrap.py  test_branch_provider.py  test_cli_args.py  test_cli_edge_cases.py  test_config.py  test_config_edge_cases.py  test_error_codes.py  test_errors_edge_cases.py  test_github_repositories.py  test_hooks_runner.py  test_hooks_runner_edge_cases.py  test_launch_app.py  test_logging_config.py  test_materialize.py  test_module_entrypoint.py  test_orchestrator.py  test_phase2_smoke.py  test_presets.py  test_presets_edge_cases.py  test_quality_abuse_paths.py  test_remote_provider.py  test_remote_workspace.py  test_repo_discovery.py  test_report_phase2.py  test_retry_edge_cases.py  test_retry_policy.py  test_runtime_profile.py  test_runtime_selection.py  test_session_cleanup.py  test_session_edge_cases.py  test_session_restore.py  test_terminal_models.py  test_terminal_pty_backend.py  test_terminal_runtime_actions.py  test_terminal_service_edge_cases.py  test_terminal_switching.py  test_tmux_bootstrap.py  test_tmux_install_matrix.py  test_tmux_layouts.py  (+12 more)
tests/contract/: test_github_api_contract.py
tests/integration/: test_cli_entrypoint_e2e.py  test_docker_runtime.py  test_mvp_acceptance.py
tests/performance/: test_terminal_service_perf.py
tests/property/: test_remote_provider_properties.py
tests/ui/: __init__.py
tests/unit/: clone-access.test.ts  config.test.ts  errors.test.ts  github-api.test.ts  hooks.test.ts  layouts.test.ts  presets.test.ts  retry.test.ts  session.test.ts  theme.test.ts  validators.test.ts  worktree.test.ts
ts-src/: cli.ts  index.ts
ts-src/commands/: attach.ts  config.ts  index.ts  kill.ts  preset.ts  run.ts  status.ts
ts-src/core/: config.ts  orchestrator.ts  presets.ts  session.ts
ts-src/git/: branch.ts  clone.ts  index.ts  worktree.ts
ts-src/github/: api.ts  index.ts
ts-src/hooks/: runner.ts
ts-src/prompts/: cleanup.ts  github-browser.ts  index.ts  panel.ts  repo.ts  setup.ts  wsl.ts
ts-src/runtime/: index.ts  platform.ts  shell.ts  wsl.ts
ts-src/tmux/: bootstrap.ts  index.ts  layouts.ts  session.ts
ts-src/types/: config.ts  errors.ts  index.ts  session.ts  worktree.ts
ts-src/utils/: ansi.ts  fs.ts  logger.ts  retry.ts  theme.ts  validators.ts
(+38 files in other folders)
