[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "branchnexus"
version = "0.1.1"
description = "Multi-branch workspace orchestrator"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "BranchNexus" }]
dependencies = ["pydantic>=2.12"]

[project.optional-dependencies]
gui = ["PySide6>=6.5"]
runtime-v2 = ["pywinpty>=2.0; platform_system == 'Windows'"]
build-exe = ["PyInstaller>=6.5", "PySide6>=6.5"]
dev = [
  "pytest>=8",
  "pytest-cov>=5",
  "pytest-xdist>=3.6",
  "pytest-mock>=3.14",
  "pytest-rerunfailures>=14",
  "hypothesis>=6.112",
  "ruff>=0.8",
  "bandit>=1.7",
  "pip-audit>=2.7",
]

[project.scripts]
branchnexus = "branchnexus.cli:run"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q --strict-config --strict-markers"
markers = [
  "critical_regression: high-risk regression tests that must pass before merge",
  "integration: integration tests across module boundaries",
  "slow: tests with longer runtime budget",
  "quarantine: flaky tests temporarily removed from hard gates",
  "security: abuse and security regression tests",
  "performance: performance baseline and regression tests",
]

[tool.coverage.run]
branch = true
source = ["src/branchnexus"]
omit = [
  "src/branchnexus/__init__.py",
  "src/branchnexus/terminal/pty_backend.py",
  "src/branchnexus/ui/runtime/bootstrap.py",
  "src/branchnexus/ui/runtime/legacy_app_impl.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 80
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
]

[tool.coverage.html]
directory = "artifacts/coverage/html"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["F", "B", "I", "UP", "SIM", "C4"]

[tool.bandit]
exclude_dirs = ["tests", ".venv", "build", "dist"]
skips = ["B101"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
show_error_codes = true
pretty = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = ["PySide6.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
  "branchnexus.cli",
  "branchnexus.docker.runtime",
  "branchnexus.git.branch_provider",
  "branchnexus.git.materialize",
  "branchnexus.git.remote_provider",
  "branchnexus.git.remote_workspace",
  "branchnexus.hooks.runner",
  "branchnexus.presets",
  "branchnexus.runtime.wsl_discovery",
  "branchnexus.runtime.wsl_runtime",
  "branchnexus.session",
  "branchnexus.terminal.pty_backend",
  "branchnexus.tmux.bootstrap",
  "branchnexus.ui.runtime.bootstrap",
  "branchnexus.ui.runtime.legacy_app_impl",
  "branchnexus.ui.screens.branch_select",
  "branchnexus.ui.screens.runtime_dashboard",
  "branchnexus.workspace.vscode",
]
ignore_errors = true
